# LLM_LoRa

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Dockerfile_cuda  Dockerfile_ollama  LICENSE  Llama2 bot game.ipynb  Llama2_model.py  Mistral_Hallucination.ipynb  README.md  data.dvc  docker-compose.yaml  entrypoint.sh  extraction-saiga.ipynb  fine-tune-llama.ipynb  llama31_model.py  llama31_train.ipynb  llm_bot.py  main.py  model.dvc  mypy.ini  one_file_train.py  private_api.py  pyproject.toml  readthedocs.yaml  requirements.txt  run_pipeline.sh  test.py  translate.csv  utils.py
.dvc/: config
.github/workflows/: pre-commit.yml
conf/: config.yaml
data/: daedalus.json  dataset_ru.json  judge.json  test.json  test_ru.json  translate.csv  values.txt
docs/: conf.py  hydra_config.rst  index.rst  modules.rst  requirements.txt  testing_model.rst  training_model.rst
legacy/: llama31_train.ipynb  llama31_train.py
testing_model/: __init__.py  __main__.py  deepeval.py  deepeval_func.py  functions_to_test_game.py  ollama_test.py  test.py  vllm-test.py
training_model/: __init__.py  __main__.py  grpo_train.py  logging_config.py  one_file_train.py  optuna.py  private_api.py  utils.py  vika_utils.py
training_model/conf/: config.yaml
vk_bot/: Llama2_model.py  llama31_model.py  llm_bot.py
wandb/run-20241024_124001-iat4s16w/: run-iat4s16w.wandb
wandb/run-20241024_124001-iat4s16w/files/: requirements.txt  wandb-metadata.json
